--- a/index.html
+++ b/index.html
@@ -1,37 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style/style.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style/style.css" />
+  </head>
 
-<body>
-    <div class="espacioStickyHeader">
-        <header class="header">
-            <h1 class="header-h1">Ejercicios del DOM</h1>
-        </header>
-    </div>
+  <body>
+    <header class="header">
+      <h1 class="header-h1">Ejercicios del DOM</h1>
+    </header>
+    <div class="espacioStickyHeader"></div>
     <main>
-        <section id="seccion1" class="main-sec">sección 1</section>
-        <section id="seccion2" class="main-sec">sección 2</section>
-        <section id="seccion3" class="main-sec">sección 3</section>
-        <section id="seccion4" class="main-sec">sección 4</section>
-        <section id="seccion5" class="main-sec">sección 5</section>
+      <h2 class="sec-h2 sec-h2-1">sección</h2>
+      <section id="seccion1" class="main-sec"><br /><br /><br />1</section>
+      <h2 class="sec-h2 sec-h2-2">sección</h2>
+      <section id="seccion2" class="main-sec"><br /><br /><br />2</section>
+      <h2 class="sec-h2 sec-h2-3">sección</h2>
+      <section id="seccion3" class="main-sec"><br /><br /><br />3</section>
+      <h2 class="sec-h2 sec-h2-4">sección</h2>
+      <section id="seccion4" class="main-sec"><br /><br /><br />4</section>
+      <h2 class="sec-h2 sec-h2-5">sección</h2>
+      <section id="seccion5" class="main-sec"><br /><br /><br />5</section>
     </main>
 
     <button class="hamburger-btn" id="hamburger">
-        <i class="bi bi-list hamburger-btn-i"></i>
+      <i class="bi bi-list hamburger-btn-i"></i>
     </button>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script src="js/EventosDOM.js" type="module"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
