--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="espacioStickyHeader"></div>
     <main>
       <h2 class="sec-h2 sec-h2-1">sección</h2>
-      <section id="seccion1" class="main-sec">
+      <section id="seccion1" class="main-sec seccion1">
         <h3>Reloj y Alarma</h3>
         <div class="reloj">
           <button id="play-reloj">play reloj</button>
@@ -48,13 +48,22 @@
         </div>
       </section>
       <h2 class="sec-h2 sec-h2-2">sección</h2>
-      <section id="seccion2" class="main-sec"><h3>seccion 2</h3></section>
+      <section id="seccion2" class="main-sec seccion2">
+        <h3>Table ball - mueve la bola</h3>
+        <div class="table"><div class="ball-table"></div></div>
+      </section>
       <h2 class="sec-h2 sec-h2-3">sección</h2>
-      <section id="seccion3" class="main-sec"><h3>seccion 3</h3></section>
+      <section id="seccion3" class="main-sec seccion3">
+        <h3>seccion 3</h3>
+      </section>
       <h2 class="sec-h2 sec-h2-4">sección</h2>
-      <section id="seccion4" class="main-sec"><h3>seccion 4</h3></section>
+      <section id="seccion4" class="main-sec seccion4">
+        <h3>seccion 4</h3>
+      </section>
       <h2 class="sec-h2 sec-h2-5">sección</h2>
-      <section id="seccion5" class="main-sec"><h3>seccion 5</h3></section>
+      <section id="seccion5" class="main-sec seccion5">
+        <h3>seccion 5</h3>
+      </section>
     </main>
 
     <button class="hamburger-btn" id="hamburger">
