--- a/index.html
+++ b/index.html
@@ -1,90 +1,93 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style/style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <h1 class="header-h1">Ejercicios del DOM</h1>
+      <h1 class="header-h1">Ejercicios del DOM</h1>
     </header>
     <div class="espacioStickyHeader"></div>
     <main>
-        <h2 class="sec-h2 sec-h2-1">sección</h2>
-        <section id="seccion1" class="main-sec seccion1">
-            <h3>Reloj y Alarma</h3>
-            <div class="reloj">
-                <button id="play-reloj">play reloj</button>
-                <button id="stop-reloj">stop reloj</button>
-                <button id="reset-reloj">reset reloj</button>
-                <label for="play-reloj stop-reloj" class="label1"></label>
-            </div>
-            <div class="Alarma">
-                <h3>Alarma</h3>
-                <label for="hora">Selecciona una hora:</label>
-                <input type="time" id="time" name="hora" min="00:00" max="23:59" required />
-                <button id="activar-alarma">Activar alarma</button>
-                <button id="desactivar-alarma">Desactivar alarma</button>
-            </div>
-        </section>
-        <h2 class="sec-h2 sec-h2-2">sección</h2>
-        <section id="seccion2" class="main-sec seccion2">
-            <h3>Table ball - mueve la bola</h3>
-            <div class="table">
-                <div class="ball-table"></div>
-            </div>
-        </section>
-        <h2 class="sec-h2 sec-h2-3">sección</h2>
-        <section id="seccion3" class="main-sec seccion3">
-            <h3>Temporizador</h3>
-            <div class="timer-container">
-                <div class="inputs-container">
-                    <div class="input-group">
-                        <label for="hours">Horas:</label>
-                        <input type="number" id="hours" min="0" max="23" value="0" oninput="validateNumber(this, 23)">
-                    </div>
-
-                    <div class="input-group">
-                        <label for="minutes">Minutos:</label>
-                        <input type="number" id="minutes" min="0" max="59" value="0" oninput="validateNumber(this, 59)">
-                    </div>
-
-                    <div class="input-group">
-                        <label for="seconds">Segundos:</label>
-                        <input type="number" id="seconds" min="0" max="59" value="0" oninput="validateNumber(this, 59)">
-                    </div>
-                </div>
-
-                <button id="startTimer">Iniciar</button>
-                <div id="display">00:00:00</div>
-            </div>
-        </section>
-        <h2 class="sec-h2 sec-h2-4">sección</h2>
-        <section id="seccion4" class="main-sec seccion4">
-            <h3>seccion 4</h3>
-        </section>
-        <h2 class="sec-h2 sec-h2-5">sección</h2>
-        <section id="seccion5" class="main-sec seccion5">
-            <h3>seccion 5</h3>
-        </section>
+      <h2 class="sec-h2 sec-h2-1">sección</h2>
+      <section id="seccion1" class="main-sec seccion1">
+        <h3>Reloj y Alarma</h3>
+        <div class="reloj">
+          <button id="play-reloj" class="button">play reloj</button>
+          <button id="stop-reloj" class="button">stop reloj</button>
+          <button id="reset-reloj" class="button">reset reloj</button>
+          <label for="play-reloj stop-reloj" class="label1"></label>
+        </div>
+        <div class="Alarma">
+          <h3>Alarma</h3>
+          <label for="hora">Selecciona una hora:</label>
+          <input
+            type="time"
+            id="time"
+            name="hora"
+            min="00:00"
+            max="23:59"
+            required
+          />
+          <button id="activar-alarma" class="button">Activar alarma</button>
+          <button id="desactivar-alarma" class="button">
+            Desactivar alarma
+          </button>
+        </div>
+      </section>
+      <h2 class="sec-h2 sec-h2-2">sección</h2>
+      <section id="seccion2" class="main-sec seccion2">
+        <h3>Table ball - mueve la bola</h3>
+        <div class="table">
+          <div class="ball-table"></div>
+        </div>
+      </section>
+      <h2 class="sec-h2 sec-h2-3">sección</h2>
+      <section id="seccion3" class="main-sec seccion3">
+        <h3>Temporizador</h3>
+        <div class="d-flex flex-column">
+          <label for="hora">Selecciona una hora y una fecha:</label>
+          <input type="datetime-local" id="datetime" />
+          <button onclick="iniciarTemporizador()" class="button">
+            Iniciar
+          </button>
+          <p id="mensaje"></p>
+        </div>
+      </section>
+      <h2 class="sec-h2 sec-h2-4">sección</h2>
+      <section id="seccion4" class="main-sec seccion4">
+        <h3>seccion 4</h3>
+      </section>
+      <h2 class="sec-h2 sec-h2-5">sección</h2>
+      <section id="seccion5" class="main-sec seccion5">
+        <h3>seccion 5</h3>
+      </section>
     </main>
 
     <button class="hamburger-btn" id="hamburger">
-        <i class="bi bi-list hamburger-btn-i"></i>
+      <i class="bi bi-list hamburger-btn-i"></i>
     </button>
 
     <script src="js/dom/barra_navegacion_dom.js"></script>
     <script src="js/index_dom.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
