Temporizador y DarkMode terminados

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
       <i class="bi bi-list hamburger-btn-i"></i>
     </button>
 
+    <button class="button-moon" id="button-moon">
+      <i class="bi bi-moon"></i>
+    </button>
+
     <script src="js/dom/barra_navegacion_dom.js"></script>
     <script src="js/index_dom.js" type="module"></script>
     <script
